--- a/workspace/package.json
+++ b/workspace/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@ionic-native/core": "^4.5.2",
+    "@ionic-native/nfc": "^4.5.3",
     "@ionic-native/qr-scanner": "^4.5.3",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
@@ -37,6 +38,7 @@
     "ionicons": "3.0.0",
     "leaflet": "^1.0.3",
     "ngx-qrcode2": "0.0.5",
+    "phonegap-nfc": "^0.7.1",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "^0.8.4"
@@ -73,7 +75,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-qrscanner": {}
+      "cordova-plugin-qrscanner": {},
+      "phonegap-nfc": {}
     },
     "platforms": [
       "browser",
